# jsdoc

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml  pypi.yml  security.yml  tests.yml  workflow.yml
jsdoc/: __init__.py  _cython_backend.pyx  _python_backend.py  errors.py
tests/: test_jsdoc.py
tests/test_files/: test01_basic.jsdoc  test02_comments_in_strings.jsdoc  test03_nested_bare_keys.jsdoc  test04_empty_and_short_tq.jsdoc  test05_special_chars.jsdoc  test06_comment_heavy.jsdoc  test07_arrays.jsdoc  test08_preserve_newlines.jsdoc  test09_dollar_underscore_keys.jsdoc  test10_real_world.jsdoc  test11_standard_json.jsdoc  test12_comments_edge_cases.jsdoc  test12_comments_various.jsdoc  test13_bare_keys_edge.jsdoc  test14_triple_quotes_edge.jsdoc  test15_invalid_bare_key.jsdoc  test15_invalid_trailing_comma.jsdoc  test16_deep_nesting.jsdoc  test16_trailing_comma.jsdoc  test17_empty_structures.jsdoc  test17_unclosed_comment.jsdoc
