[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsdoc"
version = "0.2.0"
description = "A Python library for parsing JSON with comments and bare keys (.jsdoc files)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "JackBinary", email = "jmg.exe@gmail.com"},
]
maintainers = [
    {name = "JackBinary", email = "jmg.exe@gmail.com"},
]
keywords = ["json", "comments", "parser", "jsdoc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/JackBinary/jsdoc"
Repository = "https://github.com/JackBinary/jsdoc"
Issues = "https://github.com/JackBinary/jsdoc/issues"

[tool.setuptools]
packages = ["jsdoc"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
jsdoc = ["*.jsdoc", "*.pyx"]